--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,287 @@ td.activado{
     background-color: rgb(245, 102, 102);
 }
 
-a:hover{
+td > a:hover{
     color: rgb(197, 197, 197);
+    
+}
+
+
+#estilo_verde{
+
+    color: green;
+
+    font-size:12pt;
+
+}
+
+
+
+#estilo_rojo{
+
+    color: red;
+
+    font-size:14pt;
+
+}
+
+
+
+#estilo_azul{
+
+    color: blue;
+
+    font-size:16pt;
+
+}
+
+
+
+#estilo_azul{
+
+    color: blue;
+
+    font-size:16pt;
+
+}
+
+
+
+#borde_rojo{
+
+    border: 2px solid teal;
+
+    font-size:16pt;
+
+}
+
+#mayuscula{
+    text-transform: uppercase;
+
+}
+
+#minusculas{
+    text-transform: lowercase;
+}
+
+#Capitalmay{
+    text-transform: initial;
+}
+
+#Titulo{
+    font-family:Arial, Helvetica, sans-serif; 
+    text-transform: uppercase;
+    font-size: 17.5px
+}
+
+#fondo_texto{
+
+    background-color: rgb(87, 103, 148);
+
+    opacity: 0.5;
+
+}
+
+#texto{
+    font-family:Arial, Helvetica, sans-serif; 
+    font-size: 14.5px;
+}
+
+#fondo_texto_difu{
+
+    background-color: rgba(87, 103, 148, 0.5);
+
+    opacity: 0.5;
+
+}
+
+#cuadro_punteado_medio{
+
+    border-style: dotted;
+
+    border-width: medium;
+
+}
+
+#cuadro_punteadogrueso{
+
+    border-style: dotted;
+
+    border-width: thick;
+
+}
+
+#cuadro_izquerdo{
+
+    border-left: 6px solid yellowgreen;
+
+}
+
+#cuadro_abajo{
+
+    border-bottom: 6px solid aquamarine;
+
+}
+
+#redondeado{
+
+    border: 2px tomato;
+
+    border-radius: 8px;
+
+ 
+
+}
+
+b a{
+    color: rgb(102, 128, 245);
+}
+
+#cuadro_punteado{
+
+    border-style: dotted;
+
+}
+
+
+
+#cuadro_dasheado{
+
+    border-style: dashed;
+
+}
+
+#cuadro_solido{
+
+    border-style: solid;
+
+}
+
+#cuadro_mezclado{
+
+    border-style: dashed solid dotted;
+
+}
+
+#caja{
+
+    background-color: plum;
+
+    width: 300px;
+
+    border: 15px solid purple;
+
+    padding: 50px;
+
+    margin: 20px;
+
+}
+
+#sobre_rayado{
+
+    text-decoration: overline;
+
+    text-decoration-color: red;
+
+}
+
+#tachado{
+
+    text-decoration: line-through;
+
+    text-decoration-color: white;
+
+}
+
+#subrayado{
+
+    text-decoration: underline;
+
+    text-decoration-color: yellow;
+
+}
+
+#subrayado_sobrerayado{
+
+    text-decoration: overline underline;
+
+    text-decoration-color: pink;
+
+}
+
+
+#sombreado_azul{
+     text-shadow: 2px 2px cadetblue;
+}
+
+#letra_times{
+
+    font-family: "Times New Roman", Times, serif;
+
+}
+
+
+
+#letra_arial{
+
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+#courier{
+
+    font-family: "Lucida Console", "Courier New", monospace;
+
+}
+
+
+
+#cursiva{
+
+    font-family: "Brush Script MT", "Lucida Handwriting";
+
+}
+
+
+
+#fantasia{
+
+    font-family: "Copperplate", "Papyrus";
+
+}
+
+
+
+#estilo_normal{
+
+    font-style: normal;
+
+}
+
+
+
+#estilo_italica{
+
+    font-style: italic;
+
+}
+
+
+
+#estilo_oblique{
+
+    font-style: oblique;
+
+}
+
+#negritas{
+
+    font-weight: bold;
+
+}
+
+#negrotas{
+
+    font-weight: 1200;
+
 }
